include all js libraries for webpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -96,7 +96,7 @@
 
     
     // "skipDefaultLibCheck": true,                      
-    "skipLibCheck": true                                 
+    //"skipLibCheck": true                                 
   }
 }
 
