--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/plotly.js-dist-min": "^2.3.0",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "css-loader": "^6.7.1",
     "plotly.js-dist-min": "^2.11.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3",
